--- a/hw5.html
+++ b/hw5.html
@@ -18,15 +18,16 @@
                 <li><a href="#">Contato</a></li>
                 <li><a href="#">Ajuda</a></li>
                 <li id="divider"><img src="foto/line.png" alt="line"/></li>
-                <li class="wide"><a href="#"><img src="foto/flag.png" alt="flag"/>Minhas Ofertas</a></li>
-                <li class="wide left" ><a href="#">Ola! <span> Entrar </span> ou <span> Cadastre-se </span> </a></li>
+                <li class="wide"><img src="foto/flag.png" alt="flag"/><a href="#">Minhas Ofertas</a></li>
+                <li class="wide left"><a href="#">Ola! <span> Entrar </span> ou <span> Cadastre-se </span> </a></li>
             </ul>
         </div>
         
 
         <div class="fon">
             <ul class="">
-                <li class="right"><a href="#">Cadastre-se</a></li>
+                <div class="right">
+                <li class=><a href="#">Cadastre-se</a></li> </div>
                 <li>
                     <a href="#"> <span> Log </span> in with <span> Fasebook</span></a>
                 </li>
