It made the top of the menu in the middle

--- a/hw5.html
+++ b/hw5.html
@@ -17,17 +17,17 @@
                 <li><a href="#">Forum</a></li>
                 <li><a href="#">Contato</a></li>
                 <li><a href="#">Ajuda</a></li>
-                <li id="divider"><img src="foto/line.png" alt="line"/></li>
-                <li class="wide"><img src="foto/flag.png" alt="flag"/><a href="#">Minhas Ofertas</a></li>
+                <li id="divider"><img src="foto/line.png" alt="line" /></li>
+                <li class="wide"><img src="foto/flag.png" alt="flag" /><a href="#">Minhas Ofertas</a></li>
                 <li class="wide left"><a href="#">Ola! <span> Entrar </span> ou <span> Cadastre-se </span> </a></li>
             </ul>
         </div>
-        
+        <div class="top">
+            <p class="center" >Cadastre-se</p>
+        </div>
 
         <div class="fon">
             <ul class="">
-                <div class="right">
-                <li class=><a href="#">Cadastre-se</a></li> </div>
                 <li>
                     <a href="#"> <span> Log </span> in with <span> Fasebook</span></a>
                 </li>
