logo and addition in the middle of the top menu

--- a/hw5.html
+++ b/hw5.html
@@ -27,10 +27,8 @@
         </div>
 
         <div class="fon">
+            <p class="facebook"><img src="foto/Facebook.png" alt="facebook"/></p>
             <ul class="">
-                <li>
-                    <a href="#"> <span> Log </span> in with <span> Fasebook</span></a>
-                </li>
                 <li><a href="#">ou</a></li>
                 <li><a href="#">Contato</a></li>
                 <li><a href="#">Ajuda</a></li>
