Made form until the end. Facebook button.

--- a/hw5.html
+++ b/hw5.html
@@ -19,21 +19,53 @@
                 <li><a href="#">Ajuda</a></li>
                 <li id="divider"><img src="foto/line.png" alt="line" /></li>
                 <li class="wide"><img src="foto/flag.png" alt="flag" /><a href="#">Minhas Ofertas</a></li>
-                <li class="wide left"><a href="#">Ola! <span> Entrar </span> ou <span> Cadastre-se </span> </a></li>
+                <li class="wide left"><a href="#">Ola! <span class="bold" > Entrar </span> ou <span class="bold"> Cadastre-se </span> </a></li>
             </ul>
         </div>
-        <div class="top">
-            <p class="center" >Cadastre-se</p>
-        </div>
+        <div class="center">
+            <div class="top">
+                <p>Cadastre-se</p>
+            </div>
 
-        <div class="fon">
-            <p class="facebook"><img src="foto/Facebook.png" alt="facebook"/></p>
-            <ul class="">
-                <li><a href="#">ou</a></li>
-                <li><a href="#">Contato</a></li>
-                <li><a href="#">Ajuda</a></li>
-                <li><a href="#">Minhas Ofertas</a></li>
-                <li><a href="#">Ola! Entrar ou Cadastre-se</a></li>
+            <div class="fon">
+                <div class="facebook">
+                    <a href=" " class="facebook-a ">
+                        <span class="facebook-a-bold ">Log In</span> with <span class="facebook-a-bold ">Facebook</span>
+                    </a>
+                </div>
+                <div class="line ">
+                    <div class="gLine "></div>
+                    <div class="ou ">OU</div>
+                    <div class="gLine "></div>
+                </div>
+                <form action="/">
+                    <div class="forma ">
+                        <input type="text " name="first_name " id="first_name " placeholder="First Name " required>
+                    </div>
+                    <div class="forma ">
+                        <input type="text " name="last_name " id="last_name " placeholder="Last Name " required>
+                    </div>
+                    <div class="forma ">
+                        <input type="email " name="Email " id="Email " placeholder="Email Address ">
+                    </div>
+                    <div class="forma ">
+                        <input type="password " name="choose_password " id="choose_password " placeholder="Choose Password " required>
+                    </div>
+                    <div class="forma ">
+                        <input type="password " name="password_confirm " id="password_confirm " placeholder="Password Confirm " required>
+                    </div>
+                    <div class="YouBike ">
+                        <input type="checkbox" id="YouBike ">
+                        <label for="YouBike ">Send me Youbike updates and tips</label>
+                    </div>
+                    <div class="button">
+                        <input type="submit" value="Create my Account">
+                    </div>
+                    <div class="alow">
+                        <p>By cliking the button above, you agree to the Terms of Service</p>
+                        <p>Xiew our Privacy Policy.</p>
+                    </div>
+                </form>
+            </div>
         </div>
-    </div>
 </body>
